Remove nearly every usage of java.io.File Because JavaFX only supports java.io.File some conversions are still needed